[project]
name = "DeepKernelPairwiseGP"
version = "0.1.0"
description = "Deep Kernel Learning with Pairwise Gaussian Processes for active learning with preference feedback from experts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.9.1",
    "gpytorch>=0.14.3",
    "botorch>=0.16.1"]

[tool.setuptools]
packages = ["model", "acq", "utils"]

