[project]
name = "DeepKernelPairwiseGP"
version = "0.1.1"
description = "Deep Kernel Learning with Pairwise Gaussian Processes for active learning with preference feedback from experts"
authors = [
    {name = "Yongtao Liu", email = "youngtaoliu@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.9.1",
    "gpytorch>=0.14.3",
    "botorch>=0.16.1"]

[project.urls]
Homepage = "https://github.com/yongtaoliu/DeepKernelPairwiseGP"
Repository = "https://github.com/yongtaoliu/DeepKernelPairwiseGP"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["model", "acq", "utils"]

